...
        android:layout_height="250dp"
        android:layout_marginLeft="80dp"
        app:srcCompat="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/profile_image" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="294dp"
        android:layout_height="182dp"
        android:contentDescription="@string/logo"
        android:layout_marginLeft="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_centerInParent="true"
        android:text="namee"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dob_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:hint="@string/dob"
        android:textSize="20sp"
...
        android:layout_centerInParent="true"
        android:text="Upload Profile Picture"
        android:onClick="uploadPicture"
        />

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_centerInParent="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="Sign Out"
        android:onClick="signOut"
        />

    <TextView
        android:id="@+id/upcoming"
        android:layout_width="wrap_content"
...
